# bionb3500-final-project

./: .gitignore  LICENSE  README.md  proposal.md  pyproject.toml
config/: data.yaml  words.yaml
config/experiments/: default.yaml
data/: dataset.db  extended_dataset.db
latex/: plan-bib.bib  project-plan.tex  proposal-bib.bib  proposal.tex  template.cls
results/metrics/: bert-base-uncased_metrics.csv  clustering_metrics.csv
results/metrics/bert-base-uncased/: adjusted_rand.csv  calinski_harabasz.csv  davies_bouldin.csv  normalized_mutual_info.csv  silhouette.csv
results/metrics/bert-base-uncased/agglomerative/: adjusted_rand.csv  calinski_harabasz.csv  davies_bouldin.csv  normalized_mutual_info.csv  silhouette.csv
results/metrics/bert-base-uncased/gmm/: adjusted_rand.csv  calinski_harabasz.csv  silhouette.csv  (+2 more)
results/metrics/distilbert-base-uncased/: calinski_harabasz.csv  davies_bouldin.csv  silhouette.csv
results/senses/: sense_map.json
scripts/: build_dataset.py  build_sense_map.py  evaluate_metrics.py  extract_embeddings.py  helpers.py  plot_clusters.py  plot_metrics.py  run_analysis.py  save_corpora.py  summarise.py
src/: __init__.py  embeddings.py
src/analysis/: __init__.py  clustering.py  metrics.py
src/builders/: __init__.py  corpora.py  sense_map.py
src/dataset/: __init__.py  corpora.py  database.py  dataset.py  embeddings_dataset.py  embeddings_table.py  sentences_dataset.py  sentences_table.py
src/types/: __init__.py  clusters.py  embeddings.py  metrics.py  senses.py  sentences.py
src/utils/: __init__.py  senses.py  sentences.py
(+52 files in other folders)
