[tool.poetry]
name = "bionb3500-final-project"
version = "0.1.0"
description = ""
authors = ["Lawrence Granda Zarzuela <lawrencegranda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
numpy = "^2.3.4"
torch = "^2.9.0"
datasets = "^4.3.0"
transformers = "^4.57.1"
scikit-learn = "^1.7.2"
umap-learn = "^0.5.9.post2"
matplotlib = "^3.10.7"
seaborn = "^0.13.2"
pandas = "^2.3.3"
pyyaml = "^6.0.3"
nltk = "^3.9.2"
pylint = "^4.0.2"
black = "^25.9.0"
cloc = "^0.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
